--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "php": ">=5.4",
-    "ordercloud/ordercloud": "dev-develop",
+    "ordercloud/ordercloud": "*",
     "predis/predis": "*"
   },
   "require-dev": {
